--- a/public/html/index.html
+++ b/public/html/index.html
@@ -14,7 +14,9 @@
 
 
 	<body>
-
+		<div>
+			<h3>hiiiiiiiiiiiiiiii</h3>
+		</div>
 		<canvas id="canvas1"></canvas>
 
     <script src="js/app.js"></script>
